--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.19",
-    "@types/rc-slider": "^9.3.1",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "rc-slider": "^9.7.5",
+    "@types/video.js": "^7.3.29",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-range": "^1.8.11",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.1.11"
   }
 }
