--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ffmpeg/ffmpeg": "^0.10.1",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.8",
+    "@scenejs/effects": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -19,11 +20,17 @@
     "@types/video.js": "^7.3.29",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.5",
+    "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.1",
     "react-indiana-drag-scroll": "^2.1.0",
     "react-range": "^1.8.11",
+    "react-scenejs": "^1.1.0",
+    "react-scenejs-timeline": "0.2.4",
     "react-scripts": "5.0.0",
+    "scenejs": "^1.5.0",
+    "shape-svg": "^0.3.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
