--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/video.js": "^7.3.29",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
+    "react-colorful": "^5.5.1",
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
